dev/pickpro/minio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-pickpro
  namespace: pickpro
  labels:
    app: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
        app.kubernetes.io/part-of: soludev-workload
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: minio
      containers:
        - name: minio
          image: quay.io/minio/minio:RELEASE.2024-12-18T13-15-44Z
          command: ["/bin/sh", "-ce", "/usr/bin/docker-entrypoint.sh minio server /export -S /etc/minio/certs/ --address :9000 --console-address :9001"]
          ports:
            - containerPort: 9000
              name: http
            - containerPort: 9001
              name: http-console
          volumeMounts:
            - name: data
              mountPath: /export
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: 9000
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /minio/health/ready
              port: 9000
            initialDelaySeconds: 10
            periodSeconds: 10
