dev/pickpro/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-pickpro
  namespace: pickpro
  labels:
    app: minio
spec:
  type: ClusterIP
  selector:
    app: minio
  ports:
    - name: http
      port: 9000
      targetPort: 9000
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: minio-pickpro-console
  namespace: pickpro
  labels:
    app: minio
spec:
  type: ClusterIP
  selector:
    app: minio
  ports:
    - name: http-console
      port: 9001
      targetPort: 9001
      protocol: TCP
